[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ip-geolocator"
version = "3.0.0"
description = "Production‑grade IP geolocation tool with offline DB and multi‑API support"
readme = "README.md"
authors = [
    { name = "IP Geolocator Team", email = "team@example.com" },
]
license = { text = "MIT" }
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = ["ip", "geolocation", "cli", "security", "network", "offline", "maxmind"]
dependencies = [
    "aiohttp>=3.9.0",
    "cryptography>=41.0.0",
    "rich>=13.0.0",
    "pyyaml>=6.0.0",
    "maxminddb>=2.4.0",
    "pytricia>=1.0.2",
    "pyasn>=1.6.1",
    "folium>=0.14.0",
    "stix2>=3.0.0",
    "aiodns>=3.1.0",
    "scapy>=2.5.0",
    "aiofiles>=23.2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "pylint>=3.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "bandit>=1.7.0",
]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/ip-geolocator"
Repository = "https://github.com/yourusername/ip-geolocator"
Issues = "https://github.com/yourusername/ip-geolocator/issues"

[project.scripts]
ipgeo = "ip_geolocator.main:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["ip_geolocator*"]

# ── Code Quality ──────────────────────────────────────────────────────────
[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true

[tool.pylint."messages control"]
max-line-length = 100
indent-string = "    "
good-names = ["e", "f", "i", "j", "k", "v", "ex", "run", "_"]
extension-pkg-whitelist = []
ignore-paths = ["test_*", "tests/*"]

[tool.pylint.format]
max-line-length = 100

[tool.pylint.design]
max-attributes = 50
max-returns = 10
max-branches = 15
max-statements = 60

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--tb=short",
    "--disable-warnings",
    "-v",
]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore::ResourceWarning",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/site-packages/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
